[package]
name = "aria"
version = "0.3.5"
authors = ["n01e0 <noleo@vanillabeans.mobi>"]
description = "Another Rust Implemented x86 Archetecture emulator."
license-file = "LICENSE"
edition = "2018"
readme = "README.md"
repository = "https://github.com/n01e0/ARIA"


[dependencies]
clap = "*"
colored = "1.9.3"
